--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
     </div>
   </div>
   <div id="input-container" style="display: none;">
-    <input type="text" id="user-input" placeholder="Type your message..." onkeydown="handleKeyPress(event)">
+    <input type="text" id="user-input" class="user-inputc" placeholder="Type your message..." onkeydown="handleKeyPress(event)">
     <button id="speech-button" onclick="startSpeechRecognition()">🎤</button>
     <button id="send-button" onclick="sendMessage()">Send</button>
   </div>
-
   <script src="/script.js"></script>
 </body>
 </html>
