--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
       <div class="bot-message"><strong>Lina:</strong> Hi there! I'm Lina, your friendly AI assistant created by Digital AGA. 😊 I'm here to help you with any questions or tasks you have. How can I assist you today?</div>
     </div>
   </div>
-  <div id="input-container">
+  <div id="input-container" style="display: none;">
       <input type="text" id="user-input" class="user-inputc" placeholder="Type your message..." onkeydown="handleKeyPress(event)">
       <button id="speech-button" onclick="startSpeechRecognition()">🎤</button>
       <button id="send-button" class="gradient-button" onclick="sendMessage()">Send</button>
